--- a/src/app/list/list.component.css
+++ b/src/app/list/list.component.css
@@ -1,10 +1,75 @@
-.list-container {
-  padding: 0px 24px;
-  /* height: 100vh; */
-  width: 96%;
-  border: 1px solid lightgray;
+.main-container {
+  display: flex;
+  flex-flow: row nowrap;
 }
 
+.list-container {
+  background-color: #ffffff;
+  padding: 10px 24px 24px;
+  /* height: 100vh; */
+  /* width: 96%; */
+  width: 50%;
+  border: 1px solid lightgray;
+  margin: 20px;
+  border-radius: 5px;
+  /* shadows */
+  -webkit-box-shadow: 0 10px 6px -6px #777;
+  -moz-box-shadow: 0 10px 6px -6px #777;
+  box-shadow: 0 10px 6px -6px #777;
+}
+
+.list-container button {
+  float: right;
+}
+/* fav container, prov container */
+.providers-container,
+.favorites-container {
+  margin-bottom: 20px;
+  box-shadow: 0 1.8px 1.2px rgba(0, 0, 0, 0.034),
+    0 1.7px 1.3px rgba(0, 0, 0, 0.048), 0 1.5px 1px rgba(0, 0, 0, 0.06),
+    0 1.3px 1.9px rgba(0, 0, 0, 0.072), 0 1.8px 1.4px rgba(0, 0, 0, 0.086),
+    0 1px 1px rgba(0, 0, 0, 0.12);
+  border: 1px solid lightgray;
+  padding: 0 24px;
+  border-radius: 5px;
+  height: 180px;
+}
+.providers-container {
+  background-color: rgb(233, 244, 254);
+}
+.providers-container button {
+  margin-top: -5px;
+  background-color: rgb(7, 34, 104); /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.favorites-container {
+  background-color: rgb(239, 254, 241);
+}
+.favorites-container {
+  padding-top: 20px;
+  height: 150px;
+}
+.favorites-container button {
+  margin-top: -5px;
+  background-color: rgb(192, 47, 47); /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+}
 h2 {
   border-bottom: 1px solid lightgray;
 }
